--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^7.2|^8.0",
         "ext-openssl": "*",
-        "acmephp/core": "^1.2|dev-master",
+        "acmephp/core": "^2.0.1",
         "illuminate/console": "^5.6.8|^6.0|^7.0|^8.0|^9.0",
         "illuminate/filesystem": "^5.6.8|^6.0|^7.0|^8.0|^9.0",
         "illuminate/support": "^5.6.8|^6.0|^7.0|^8.0|^9.0"
